--- a/src/components/Work.astro
+++ b/src/components/Work.astro
@@ -13,7 +13,7 @@ import Project_Card from './Project_Card.astro';
       <div role="list" class="col link-card-grid">
 
           <Project_Card
-              src = "../../public/mobile-apps/task.png"
+              src = "mobile-apps/task.png"
               alt = "Project Planer"
               title ="Project Planer"
               reason    = 'Workshop "Mobile Experience"'
@@ -27,7 +27,7 @@ import Project_Card from './Project_Card.astro';
           />
 
           <Project_Card
-                  src = "../../public/mobile-apps/freezer.png"
+                  src = "mobile-apps/freezer.png"
                   alt = "Freezer App"
                   title ="Freezer App"
                   reason    = 'Workshop "Mobile Experience"'
@@ -41,7 +41,7 @@ import Project_Card from './Project_Card.astro';
           />
 
           <Project_Card
-                  src = "../../public/mobile-apps/Screenshot%202023-04-24%20193445.png"
+                  src = "mobile-apps/Screenshot%202023-04-24%20193445.png"
                   alt = "Magic App"
                   title ="Magic App"
                   reason    = 'Bachelor Thesis'
@@ -67,7 +67,7 @@ import Project_Card from './Project_Card.astro';
                 <div class="flip-box">
                     <div class="flip-box-inner">
                         <div class="flip-box-front">
-                            <img src="../../public/digital-design/flyer.png" alt="Ouverture">
+                            <img src="digital-design/flyer.png" alt="Ouverture">
                         </div>
                         <div class="flip-box-back">
                             <h5><strong>Blotzhain Ouverture</strong></h5>
@@ -89,7 +89,7 @@ import Project_Card from './Project_Card.astro';
                 <div class="flip-box">
                     <div class="flip-box-inner">
                         <div class="flip-box-front">
-                            <img src="../../public/digital-design/ahsichtssach.png" alt="Ahsichtssach">
+                            <img src="digital-design/ahsichtssach.png" alt="Ahsichtssach">
                         </div>
                         <div class="flip-box-back">
                             <h5><strong>Ahsichtssach</strong></h5>
@@ -111,7 +111,7 @@ import Project_Card from './Project_Card.astro';
                 <div class="flip-box">
                     <div class="flip-box-inner">
                         <div class="flip-box-front">
-                            <img src="../../public/digital-design/Unbenannt.png" alt="TD">
+                            <img src="digital-design/Unbenannt.png" alt="TD">
                         </div>
                         <div class="flip-box-back">
                             <h5><strong>Logo Design</strong></h5>
@@ -139,7 +139,7 @@ import Project_Card from './Project_Card.astro';
                 <div class="flip-box">
                     <div class="flip-box-inner">
                         <div class="flip-box-front">
-                            <img src="../../public/3d-renders/houseInTheHills.jpeg" alt="House" style="width:100%;height:auto">
+                            <img src="3d-renders/houseInTheHills.jpeg" alt="House" style="width:100%;height:auto">
                         </div>
                         <div class="flip-box-back">
                             <h5><strong>House in the hills</strong></h5>
@@ -162,7 +162,7 @@ import Project_Card from './Project_Card.astro';
                 <div class="flip-box">
                     <div class="flip-box-inner">
                         <div class="flip-box-front">
-                            <img src="../../public/3d-renders/Blotzhain_saveTheDate.jpg" alt="Blotzhain">
+                            <img src="3d-renders/Blotzhain_saveTheDate.jpg" alt="Blotzhain">
                         </div>
                         <div class="flip-box-back">
                             <h5><strong>Blotzhain</strong></h5>
@@ -185,7 +185,7 @@ import Project_Card from './Project_Card.astro';
                 <div class="flip-box">
                     <div class="flip-box-inner">
                         <div class="flip-box-front">
-                            <img src="../../public/3d-renders/mama_baba_std_ZeroCompression.png" alt="STD">
+                            <img src="3d-renders/mama_baba_std_ZeroCompression.png" alt="STD">
                         </div>
                         <div class="flip-box-back">
                             <h5><strong>Save the date</strong></h5>
