--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -2,8 +2,8 @@
 import '../style/global.css';
 
 const {
-    title = 'Jeanine White: Personal Site',
-    description = 'The personal site of Jeanine White',
+    title = "MARC'S PROTFOLIO",
+    description = '',
 } = Astro.props;
 ---
 
