--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -9,7 +9,7 @@ const {
 
 <meta charset="UTF-8" />
 <meta name="description" property="og:description" content={description} />
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, inital-scale=1.0"/>
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
 
