--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Lay from '../components/Lay.svelte';
 		font-family: system-ui;
 		margin: 0;
 		padding: 0;
-		background-color: #030003;
+		background-color: #403952;
 	}
 
 	h1,
@@ -46,12 +46,12 @@ import Lay from '../components/Lay.svelte';
 	}
 	#myVideo {
 		position: fixed;
-		opacity: 1;
+		opacity: 0.3;
 		top: 0;
 		left: 0;
 		right: 0;
 		bottom: 0;
 		min-width: 100vw;
-		min-height: 100vh;
+		min-height: 100svh;
 	}
 </style>
