--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Lay from '../components/Lay.svelte';
 		font-family: system-ui;
 		margin: 0;
 		padding: 0;
-		background-color: #403952;
+		background-color: #342f42;
 	}
 
 	h1,
